Fix: overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,7 +119,8 @@ header{
  * and top, right, or left to choose which edge to stick to: */
 
 #provinces-table {
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 thead th {
